# finesse

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
include/: cpu.hh  cpu_memory.hh  memory.hh  meson.build  nes.hh  rom.hh
src/: cpu.cc  cpu_memory.cc  finesse.cc  meson.build  nes.cc  nes.hh  rom.cc
subprojects/: catch2.wrap  spdlog.wrap
tests/: meson.build  test_main.cc
